--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.6",
+        "intervention/image": "^2.0",
+        "jenssegers/imagehash": "*",
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
