--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "compromise": "^14.14.3",
         "face-api.js": "^0.22.2",
-        "sweetalert2": "^11.14.4"
+        "openai": "^4.76.3",
+        "sweetalert2": "^11.14.4",
+        "wink-nlp": "^2.3.2"
     }
 }
